<resources>
    <string name="app_name">TuID Vida</string>
    <string name="action_sign_in" translatable="false">Ingresar con Usuario y Clave</string>
    <string name="title_activity_startup" translatable="false">Tuid</string>
    <string name="title_activity_registrar" translatable="false">Nuevo usuario</string>
    <string name="action_register" translatable="false">Registrate</string>
    <string name="action_captura_frente_dni" translatable="false">Capturar Frente del DNI</string>
    <string name="action_captura_dorso_dni" translatable="false">Capturar Dorso del DNI</string>
    <string name="no_hay_conexion_a_internet" translatable="false">No hay conexión a internet</string>
    <string name="setup_google_play_no_instalado" translatable="false">Google Play no esta instalado en este dispositivo</string>
    <string name="setup_version_invalida" translatable="false">Versión inválida. Debe indicarse un número válido y mayor a cero</string>
    <string name="setup_numero_de_version_inexistente" translatable="false">Debe indicarse un número en la versión</string>
    <string name="setup_descargando_una_version_mas_reciente" translatable="false">Descargando una versión más reciente ...</string>
    <string name="setup_hubo_error_al_descargar_la_version" translatable="false">"Hubo un error al descargar la nueva versión: "</string>
    <string name="cancel" translatable="false">Cancelar</string>
    <string name="save" translatable="false">Guardar</string>
    <string name="saving_image" translatable="false">Guardando Imagen</string>
    <string name="preparing_card" translatable="false">Preparando tarjeta de memoria</string>
    <string name="no_storage_card" translatable="false">No hay tarjeta de memoria</string>
    <string name="not_enough_space" translatable="false">No hay espacio suficiente</string>
    <string name="yes" translatable="false">Sí</string>
    <string name="no" translatable="false">No</string>
    <string name="image" translatable="false">Imagen</string>
    <string name="alert_default_title" translatable="false">Atención</string>
    <string name="falla_inicializar_barcode" translatable="false">Falla al iniciar el lector del código del documento</string>
    <string name="falla_inicializar_ocr" translatable="false">Falla al iniciar el lector OCR del textos del documento</string>
    <string name="falla_captura_barcode" translatable="false">Repite por favor la captura. No se pudo analizar correctamente la imagen.</string>
    <string name="es_necesario_otorgar_los_permisos_solicitados_para_continuar" translatable="false">Es necesario otorgar los permisos solicitados para continuar</string>
    <string name="ok" translatable="false">Aceptar</string>
    <string name="permission_camera_rationale" translatable="false">Es necesario acceder a la cámara para su escaneo.</string>
    <string name="no_camera_permission" translatable="false">La aplicación no puede funcionar porque no diste permiso de acceso a la cámara.</string>
    <string name="low_storage_error" translatable="false">Hay poco espacio para descargar librerías necesarias para el scan del texto.</string>
    <string name="ocr_header" translatable="false">Cliquear &quot;Detectar Texto&quot; para iniciar scan</string>
    <string name="capture_front" translatable="false">Capturar Frente</string>
    <string name="capture_back" translatable="false">Capturar Dorso</string>
    <string name="capture_gestures" translatable="false">Pruebas de Vida</string>
    <string name="send_chance" translatable="false">Enviar respuesta</string>
    <string name="start_validation" translatable="false">Iniciar validación</string>
    <string name="send_validation_code" translatable="false">Enviar código</string>
    <string name="auto_focus" translatable="false">Autofocus</string>
    <string name="use_flash" translatable="false">Usar flash</string>
    <string name="ocr_success" translatable="false">Scan satisfactorio</string>
    <string name="ocr_failure" translatable="false">No se capturó ningún texto</string>
    <string name="ocr_error" translatable="false">"Error al leer el siguiente texto: %1$s"</string>
    <string name="ingreso_por_datos_biometricos" translatable="false">Fé de Vida</string>
    <string name="explicacion_registro_paso1" translatable="false">El primer paso consiste en tomar una fotografía del frente de tu DNI. Busca un lugar con buena iluminación</string>
    <string name="explicacion_registro_paso2" translatable="false">El segundo paso consiste en tomar una fotografía del dorso de tu DNI. Busca un lugar con buena iluminación.</string>
    <string name="explicacion_registro_paso3" translatable="false">Ahora vamos a hacer algunas capturas de tus gestos como prueba de vida. Tu cara deberá ocupar gran parte de la pantalla</string>
    <string name="explicacion_registro_chances" translatable="false">Necesitamos que respondas la siguiente pregunta correctamente para dar por finalizado tu registro.</string>
    <string name="explicacion_registro_validacion" translatable="false">Para completar tu registro debes indicar una dirección de mail o un número de teléfono. Recibirás un código de verificación.</string>
    <string name="explicacion_registro_scan_paso1" translatable="false">El primer paso, consiste en realizar un scan del frente y dorso de tu DNI. Busca un lugar con buena iluminación</string>
    <string name="explicacion_registro_scan_paso2" translatable="false">Ahora vamos a capturar un gesto como prueba de vida. Tu cara deberá ocupar gran parte de la pantalla</string>
    <string name="gesto_1" translatable="false">Selfie sin gestos</string>
    <string name="gesto_2" translatable="false">Gesto 2</string>
    <string name="gesto_3" translatable="false">Gesto 3</string>
    <string name="pregunta_chance" translatable="false">Pregunta de la Chance</string>
    <string name="chance" translatable="false">Chance</string>
    <string name="prompt_mail" translatable="false">Correo electrónico</string>
    <string name="prompt_telefono" translatable="false">Número de Teléfono</string>
    <string name="prompt_codigo_validacion" translatable="false">Código de Verificación</string>
    <string name="error_leer_informacion_texto_no_se_pudo" translatable="false">Lamentablemente no pudimos obtener toda la información del frente del DNI. Prueba otra vez.</string>
    <string name="error_leer_informacion_texto_no_se_pudo_d" translatable="false">Lamentablemente no pudimos obtener toda la información del dorso del DNI. Prueba otra vez.</string>
    <string name="error_leer_informacion_texto" translatable="false">Lamentablemente tuvimos problemas para leer la información. Prueba otra vez.</string>
    <string name="error_leer_codigo_qr" translatable="false">Lamentablemente no pudimos leer la información del código qr. Prueba otra vez.</string>
    <string name="action_continuar" translatable="false">Continuar</string>
    <string name="alert_reconocimiento_ok" translatable="false">Identificación satisfactorio. Presiona Confirmar</string>
    <string name="confirmar_registraci_n" translatable="false">Confirmar Registración</string>
    <string name="registro_satisfactorio" translatable="false">Tu registro se completó satisfactoriamente</string>
    <string name="telefono_invalido" translatable="false">Debes ingresar un número de teléfono válido</string>
    <string name="corre_invalido" translatable="false">Debes ingresar un correo electrónico válido</string>
    <string name="datos_envio_vacios" translatable="false">Debes seleccionar e ingresar datos en alguno de los campos</string>
    <string name="alert_ingresa_codigo_enviado" translatable="false">Debes ingresar el código que te enviamos</string>
    <string name="alert_elige_respuesta" translatable="false">Debes elegir una respuesta</string>
    <string name="alert_recibiras_codigo_verificacion" translatable="false">Pronto recibirás el código de verificación</string>
    <string name="imposible_validar_identidad" translatable="false">No es posible validar tu identidad</string>
    <string name="alert_verificando_info" translatable="false">Verificando la información. Aguarde un momento</string>
    <string name="alert_validando_identidad" translatable="false">Aguarda un instante mientras validamos tu identidad</string>
    <string name="alert_enviando_codigo_ver" translatable="false">Enviando código de verificación...</string>
    <string name="no_sos_usuario" translatable="false">¿No sos %s?</string>
    <string name="title_activity_main" translatable="false">Bienvenido</string>
    <string name="iniciar_scan" translatable="false">Iniciar Scan</string>
    <string name="title_activity_main_">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alert_titulo_alerta">Alerta</string>
    <string name="alert_msn_cancelar_registro">¿Desea cancelar el proceso de registro?</string>
    <string name="validacion_conirmacion_email">No coincide el Email de confirmación </string>
    <string name="conirmacion_email">Confirmar correo electrónico</string>
    <string name="conirmacion_telf">Confirmar número de teléfono</string>
    <string name="validacion_conirmacion_telefono">No coinciden numeros telefonicos</string>
    <string name="contact_dni">DNI</string>
    <string name="contact_email">Email</string>
    <string name="contact_asunto">Asunto</string>
    <string name="contact_mensaje">Mensaje</string>
    <string name="contact_enviar">Enviar</string>
    <string name="contact_validar_dni">Debe ingresar un DNI valido.</string>
    <string name="contact_validar_email">El Email no es valido.</string>
    <string name="contact_validar_asunto">Debe ingresar un el ASUNTO.</string>
    <string name="contact_validar_mensaje">Se requiere un Mensaje</string>
    <string name="main_alert_back">¿Está seguro que desea salir? </string>
    <string name="label_fe_vida">Fé de vida</string>
    <string name="label_terminos_text">Acepto terminos y condiciones</string>
    <string name="nav_titulo_termino_condiciones">Terminos y Condiciones</string>
    <string name="nav_titulo_politicas">Políticas de privacidad</string>
    <string name="nav_titulo_empresa">Empresa</string>
    <string name="nav_titulo_contacto">Contacto</string>
</resources>