<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/white">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

      <ProgressBar
          android:id="@+id/progressbar"
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/white"
          android:indeterminate="true"
          android:indeterminateTint="@color/colorAccent"
          android:max="100"
          android:visibility="invisible" />

      <LinearLayout
          android:id="@+id/paso_reg1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/explicacion_registro_paso1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <ImageView
            android:id="@+id/imgDNIFrente"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            app:srcCompat="@drawable/frente_dni" />

        <Button
            android:id="@+id/btnCapturarFrente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/action_captura_frente_dni" />

        <TextView
            android:id="@+id/lblFrenteResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/paso_reg2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/explicacion_registro_paso2"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <ImageView
            android:id="@+id/imgDNIDorso"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            app:srcCompat="@drawable/dorso_dni" />

        <Button
            android:id="@+id/btnCapturarReverso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/action_captura_dorso_dni" />

        <TextView
            android:id="@+id/lblBackResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/paso_reg3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/explicacion_registro_paso3"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <CheckBox
            android:id="@+id/chkGesto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:checked="false"
            android:enabled="false"
            android:text="@string/gesto_1" />

        <CheckBox
            android:id="@+id/chkGesto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:checked="false"
            android:enabled="false"
            android:text="@string/gesto_2" />

        <CheckBox
            android:id="@+id/chkGesto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:checked="false"
            android:enabled="false"
            android:text="@string/gesto_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

          <Button
              android:id="@+id/btnCaptureGestures"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:text="@string/capture_gestures" />

          <Button
              android:id="@+id/btnConfirmar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:text="@string/confirmar_registraci_n"
              android:visibility="gone" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/paso_chances"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/explicacion_registro_chances"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:id="@+id/txtPreguntaChance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/pregunta_chance"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <RadioButton
              android:id="@+id/rdChance0"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:checked="false"
              android:text="@string/chance" />

          <RadioButton
              android:id="@+id/rdChance1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:checked="false"
              android:text="@string/chance" />

          <RadioButton
              android:id="@+id/rdChance2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:checked="false"
              android:text="@string/chance" />

          <RadioButton
              android:id="@+id/rdChance3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:checked="false"
              android:text="@string/gesto_3" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

          <Button
              android:id="@+id/btnSendChance"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:text="@string/send_chance" />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/paso_validacion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/explicacion_registro_validacion"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <RadioButton
              android:id="@+id/optSendMail"
              android:layout_width="0dp"
              android:checked="true"
              android:layout_height="match_parent"
              android:layout_weight="0.1" />

          <android.support.design.widget.TextInputLayout
              android:id="@+id/txtEmail"
              android:layout_width="0dp"
              android:layout_height="wrap_content"

              android:layout_weight="0.9">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

          </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="0.9"
              android:orientation="horizontal" />

          <android.support.design.widget.TextInputLayout
              android:id="@+id/txtEmailConfirmar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="0.1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

          </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <RadioButton
              android:id="@+id/optSendSMS"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="0.1" />

          <android.support.design.widget.TextInputLayout
              android:id="@+id/txtTelefono"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.9"
              android:enabled="false">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_telefono"
                android:inputType="phone"
                android:maxLines="1"
                android:enabled="false"
                android:singleLine="true" />

          </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSendValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/start_validation" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/txtCodigoValidacion"
            android:layout_height="wrap_content">

          <EditText

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/prompt_codigo_validacion"
              android:inputType="text"
              android:maxLines="1"
              android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSendCodeValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/send_validation_code" />

      </LinearLayout>
    </LinearLayout>
  </ScrollView>
  <!--<include
      layout="@layout/app_bar_main_"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  <android.support.design.widget.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:fitsSystemWindows="true"
      app:headerLayout="@layout/nav_header_main_"
      app:menu="@menu/activity_main_menu_drawer" >

  </android.support.design.widget.NavigationView>-->

</android.support.v4.widget.DrawerLayout >