<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

  <view
      android:id="@+id/image"
      class="com.autenticar.tuid.utils.cropimage.CropImageView"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_x="0dip"
      android:layout_y="0dip"
      android:background="#55000000" />

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:orientation="horizontal"
      android:layout_margin="10dip">


    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dip"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginStart="10dip"
        android:layout_alignParentEnd="true"
        android:text="@string/save" />

    <ImageButton
        android:id="@+id/rotateRight"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_toStartOf="@id/save"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_rotate_right" />

    <ImageButton
        android:id="@+id/rotateLeft"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/rotateRight"
        android:layout_toEndOf="@+id/discard"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_rotate_left" />


  </RelativeLayout>
</RelativeLayout>
